# dmake

./: .gitignore  Makefile.am  configure.ac  dmake.c  extern.h  writedeps.pl
unix/: dcache.c
win95/microsft/: allochnd.cpp  config.h
winnt/: dirent.h
winnt/mingw/: cppcrt.def  newmodes00000.s  newmodet.s  sysintf.h
winnt/msvc6/: sysintf.h
